# matsci

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_WIKI.md  Cargo.toml  README.md  _chore_msg.txt  _rcb_astronomy_run.txt  _rcb_astronomy_score.txt  _score_only.py  _score_run.py  _smoke_compact_root.py  _smoke_csm_skip.py  _smoke_rdkit_sklearn.py  _smoke_sysprompt.py  _smoke_telemetry.py  _smoke_triage.py  _test_agent_log.txt  _test_agent_tools.py  _test_dangling.py  _test_patched_model_tools.py  _test_react_agent_minimal.py  _test_react_log.txt  _test_simple_graph_dangling.py  anomalies.db.bak_v0  backend-review-report.md  docker-compose.yml  generate_icons.py  huginn.toml.example  rcb_huginn.py  research_inspiration_chemputation_smileyllama_modular_robot.html  start_server.py  test_report.html  测试报告_matsci-agent_20260706.md
agent/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  INCAR  LICENSE  MONITORING.md  Makefile  README.md  SECURITY.md  _tmp_h3_5iter.py  _tmp_h3_action_trace.py  _tmp_h3_autoloop.py  _tmp_h3_each_toggle.py  _tmp_h3_fh.py  _tmp_h3_manual_learn.py  _tmp_h3_no_kb.py  _tmp_h3_one_loop.py  _tmp_h3_select_trace.py  _tmp_h3_test_import.py  _tmp_h3_toggle_off.py  _tmp_h3_trace_learn.py  band_gap_stability_analysis.md  build_exe.py  demo_comprehensive.py  demo_fem_pipeline.py  demo_parallel.py  docker-compose.yml  halide_perovskite_model.md  huginn-agent.bat  huginn.toml.orig  huginn_autoloop_report_loop_0d6d56b6.md  huginn_autoloop_report_loop_0e9a2aa1.md  huginn_autoloop_report_loop_16c3481f.md  huginn_autoloop_report_loop_24c97fc5.md  huginn_autoloop_report_loop_2831fe52.md  huginn_autoloop_report_loop_2f1d2a47.md  huginn_autoloop_report_loop_309ea67b.md  huginn_autoloop_report_loop_3b31f3be.md  (+63 more)
agent/.bullpen/qe/: qe.in
agent/.checkpoints/: test_execute_20260619_185107.json  test_execute_20260619_185635.json  test_execute_20260619_190231.json  test_execute_20260619_190816.json  test_execute_20260619_191334.json  test_execute_20260619_191735.json  test_execute_20260619_203741.json  test_execute_20260619_210407.json
agent/.github/: PULL_REQUEST_TEMPLATE.md
agent/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agent/.github/workflows/: ci.yml  release.yml
agent/Si_diamond/: POSCAR
agent/docs/: architecture.md  async_dispatch_spec.md  enhanced_modules.md  harness_evolution_spec.md  hils_active_inference_p2_spec.md  ising_crdt_p1_spec.md  layered_memory_spec.md  memory_dispatch_integration_spec.md  reward_design.md
agent/huginn/: __init__.py  agent.py  agent_config.py  anomaly_log.py  bourbaki_env.py  checkpointer.py  cli.py  codebase.py  cognitive_engine.py  cognitive_primitives.py  config.py  config_integrity.py  content_parts.py  context_builder.py  context_manager.py  crypto.py  errors.py  export_manager.py  export_share.py  feature_flags.py  governance.py  lifespan.py  llm.py  llm_retry.py  mcp_client.py  mechanics.py  permissions.py  persona_emotion.py  persona_loader.py  persona_matcher.py  personas.py  phases.py  privacy_guard.py  project_context.py  project_memory.py  prompts.py  provenance.py  reflection.py  research_budget.py  research_log.py  (+12 more)
agent/huginn/academic/: __init__.py  deli_research.py  journal_db.py  paper_tool.py  standards_checker.py
agent/huginn/advisor/: __init__.py  knowledge.py  model_advisor.py
agent/huginn/agent/: __init__.py  callbacks.py  code_act_loop.py  code_act_selfcheck.py  context.py  core.py  hint_coordinator.py  middlewares.py  prompt_builder.py  reflection.py  session.py  streaming.py
agent/huginn/agents/: __init__.py  budget_decomp.py  circuit_breaker.py  degradation_coordinator.py  director.py  factory.py  health_dashboard.py  loop_detector.py  orchestrator.py  parallel_executor.py  speculator.py  subagent.py  swarm.py  task_dag.py  team.py  tool_budget.py  tool_call_router.py
agent/huginn/api/: __init__.py  context.py  event.py  filter.py  star.py
agent/huginn/autoloop/: __init__.py  _verify_av.py  _verify_b.py  _verify_f.py  _verify_v11.py  _verify_v12.py  bandit.py  budget.py  (+20 more)
agent/joint_beliefs/: test_05d4d2a06b02.json
agent/lammps_debug_test/: input.lammps
agent/lammps_dem_lammps_out/: input.dem.lammps
agent/lammps_fixed_test/: log.lammps
agent/lammps_test/: input.lammps
agent/lammps_test2/: input.lammps
agent/lammps_traj_test/: log.lammps  traj.lammpstrj
agent/lammps_workflow_test/: input.lammps  log.lammps
agent/matsci_agent/: __init__.py  agent.py  cli.py  codebase.py  config.py  crypto.py  llm.py  mechanics.py  permissions.py  personas.py  project_context.py  prompts.py  server.py  types.py
agent/monitoring/: alerts.yml
agent/scripts/: build_exe.py  build_exe_clean.py  build_sidecar.py  entry.py  run_dev.sh  run_regression.py  run_tests.sh
agent/tests/: conftest.py  e2e_webbridge_test.py  sci_automation_test.py  stress_test_phase_e.py  stress_test_round2.py  test_abaqus_mcp.py  test_abaqus_tool.py  test_active_learning_tool.py  test_adapter_constraints.py  test_advanced_frameworks.py  test_affordance.py  test_agent_prompt_cache.py  test_agentic_search_tool.py  test_api_contract.py  test_argus_provenance.py  test_async_pipeline.py  test_audit14_p1_3_4_5.py  test_audit_verify.py  test_auto_pipeline.py  test_autoloop_budget.py  test_autoloop_e2e.py  test_autoloop_engine.py  test_autoloop_planstore.py  test_autoresearch_tool.py  test_bash_tool.py  test_belief_entropy.py  test_benchmark.py  test_bio_tools.py  test_booter.py  test_bourbaki_sympy.py  test_bourbaki_tool.py  test_browser_tool.py  test_campaign.py  test_chaos_engineering.py  test_characterization_tool.py  test_checkpointer.py  test_chunker.py  test_citation_graph.py  test_clarification_enhanced.py  test_clarification_tool.py  (+273 more)
cli/: Cargo.toml
cli/src/: config.rs  main.rs  python.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
pyext/: Cargo.toml  pyproject.toml
pyext/.cargo/: config.toml
pyext/src/: analysis.rs  files.rs  lammps.rs  lib.rs  sandbox.rs  vasp.rs  vectors.rs
sidecar/: Cargo.toml
sidecar/src/: main.rs
(+1130 files in other folders)
