[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matsci-agent"
version = "0.1.0"
description = "Material Science specialized AI Agent Harness"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "toki"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "deepagents>=0.5.0",
    "click>=8.0",
    "rich>=13.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "black>=23.0", "mypy>=1.5"]
accel = ["matsci-ext>=0.1.0"]
all = ["pymatgen>=2024.0", "ase>=3.22", "paramiko>=3.0", "docker>=7.0", "chromadb>=0.4"]

[project.scripts]
matsci-agent = "matsci_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["matsci_agent*"]
