[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huginn-agent"
version = "0.1.0"
description = "Material Science specialized AI Agent Harness"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Huginn contributors"}]
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["llm", "agent", "materials-science", "dft", "molecular-dynamics", "fea", "cfd"]
dependencies = [
    "pydantic>=2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "deepagents>=0.5.0",
    "click>=8.0",
    "rich>=13.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-benchmark>=4.0", "pytest-github-actions-annotate-failures>=0.2", "pytest-cov>=4.0", "pytest-xdist>=3.0", "black>=23.0", "memory-profiler>=0.60", "ruff>=0.4.0", "mypy>=1.5", "pre-commit>=3.0", "pip-audit>=2.7"]
all = ["pymatgen>=2024.0", "ase>=3.22", "dscribe>=2.0", "paramiko>=3.0", "chromadb>=0.4", "sentence-transformers>=2.5", "pymupdf>=1.23", "PyPDF2>=3.0", "easyocr>=1.7", "pytesseract>=0.3"]
rag = ["chromadb>=0.4", "sentence-transformers>=2.5", "pymupdf>=1.23", "PyPDF2>=3.0", "easyocr>=1.7", "pytesseract>=0.3"]

[project.scripts]
huginn-agent = "huginn.cli:main"

[project.urls]
Repository = "https://github.com/huginn-agent/huginn"
Documentation = "https://github.com/huginn-agent/huginn/blob/main/docs/architecture.md"
Issues = "https://github.com/huginn-agent/huginn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["huginn*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=huginn --cov-report=term-missing --cov-fail-under=60"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function-call-in-default-argument (common in dataclasses)
    "SIM108", # use ternary operator (style preference)
    "N803",  # scientific/math naming uses uppercase (X, E, T)
    "N806",  # same for local variables
    "B905",  # zip() strict= is too noisy across the legacy codebase
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E741", "F841", "N806", "B905"]
"huginn/evaluation/core.py" = ["N803", "N806"]
"huginn/unified/*.py" = ["N806"]
"huginn/tensor_algebra.py" = ["N806"]
"huginn/visualize.py" = ["N806"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
incremental = true
cache_dir = ".mypy_cache"
exclude = [
    '^tests/',
    '^build/',
    '^dist/',
    '^\.git/',
    '^\.tox/',
]


[[tool.mypy.overrides]]
module = [
    "pymatgen.*",
    "langchain.*",
    "langchain_core.*",
    "langgraph.*",
    "numpy.*",
    "sklearn.*",
    "chromadb.*",
    "sentence_transformers.*",
    "matplotlib.*",
    "PIL.*",
    "ase.*",
    "dscribe.*",
    "docker.*",
    "paramiko.*",
    "aiohttp.*",
    "cryptography.*",
]
follow_imports = "skip"
[tool.coverage.run]
source = ["huginn"]
omit = [
    "*/tests/*",
    "huginn/_version.py",
    "huginn/visualize.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "langchain-openai>=1.3.2",
    "memory-profiler>=0.61.0",
    "pytest-benchmark>=5.2.3",
]
