[package]
name = "matsci"
version = "0.1.0"
edition = "2021"
description = "Rust CLI frontend for MatSci-Agent"
license = "MIT"
authors = ["toki"]

[[bin]]
name = "matsci"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
colored = "2.1"
dialoguer = "0.11"
dirs = "5.0"
