[package]
name = "matsci-ext"
version = "0.1.0"
edition = "2021"
description = "Rust performance extensions for MatSci-Agent"
license = "MIT"
authors = ["toki"]

[lib]
name = "matsci_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
