[package]
name = "huginn-ext"
version = "0.1.0"
edition = "2021"
description = "Rust performance extensions for Huginn"
license = "MIT"
authors = ["toki"]

[lib]
name = "huginn_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
rayon = "1.10"
wait-timeout = "0.2"
which = "7.0"
