[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "huginn-ext"
version = "0.1.0"
description = "Rust performance extensions for Huginn"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "huginn_ext"
