[package]
name = "huginn-sidecar"
version = "0.1.0"
edition = "2021"
description = "Rust sidecar for Huginn: process manager + event bus"
license = "MIT"
authors = ["toki"]

[[bin]]
name = "huginn-sidecar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
process-wrap = { version = "9", features = ["tokio1"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
