[package]
name = "huginn-agent-desktop"
version = "0.1.0"
description = "Huginn Desktop App"
authors = ["toki"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
